2008-10-21 Samuel Abels <http://debain.org>

	* src/Exscript/TemplateRunner.py: Passing a hostname to 
	TemplateRunner.__init__() is now unnecessary even if a template (or 
	template file) is passed.
	* src/Exscript/Interpreter/stdlib/Sys/run.py: Fix: Broken by last commit.
	* src/Exscript/Exscript.py: Cleanups.
	* exscript: Fix the --hosts argument.

2008-10-10 Samuel Abels <http://debain.org>

	* src/Exscript/Exscript.py, src/Exscript/TemplateRunner.py, exscript,
	src/Exscript/Interpreter/stdlib/Sys/run.py, src/Exscript/Job.py: Further
	refactoring to allow for executing scripts that do not open a remote 
	connection.
	* src/Exscript/Interpreter/Scope.py, src/Exscript/TemplateRunner.py: Allow
	for retrieving the variables from completed Exscript templates.

2008-10-09 Samuel Abels <http://debain.org>

	* src/Exscript/Exscript.py, src/Exscript/TemplateRunner.py, exscript, 
	src/Exscript/Interpreter/stdlib/Sys/run.py: Major refactoring of the top
	level API objects to allow for executing scripts that do not open a remote 
	connection (future).

2008-10-08 Samuel Abels <http://debain.org>

	* src/Exscript/Interpreter/Extract.py: Fix the "into" keyword.
	* src/Exscript/Interpreter/stdlib/IPv4/in_network.py: Apply mask to both, 
	network and ip address.

2008-09-05 Samuel Abels <http://debain.org>

	* doc/, src/Exscript/Exscript.py: Add documentation.

2008-08-04 Samuel Abels <http://debain.org>

	* src/Exscript/Interpreter/*: Fix escaping in global scope.

2008-07-15 Samuel Abels <http://debain.org>

	* src/Exscript/Interpreter/stdlib/Connection/close.py: New stdlib function 
	"close".

2008-07-14 Samuel Abels <http://debain.org>

	* src/Exscript/Interpreter/stdlib/File/rm.py: New stdlib function "rm".

2008-07-11 Samuel Abels <http://debain.org>

	* src/Exscript/Interpreter/stdlib/Sys/tacacs_lock.py,
	src/Exscript/Interpreter/stdlib/Sys/tacacs_unlock.py: Fix: Were completely
	broken.
	* src/Exscript/Exscript.py: Remove debug info.
