@@ -1,4 +1,3 @@
-* Add support for account pooling.
 * Create a clean/complete API for the Exscript module.
 * Create tests.
 * Create an installer that builds a self-contained package and drags FooLib.
