@@ -19,46 +19,45 @@ True  = 1
 False = 0
 
 class Authenticate(Action):
-    def __init__(self, user, **kwargs):
-        assert user is not None
+    def __init__(self, account_manager, account = None, **kwargs):
         Action.__init__(self)
-        self.user            = user
-        self.password        = kwargs.get('password', None)
+        self.account_manager = account_manager
+        self.account         = account
         self.wait            = kwargs.get('wait',     False)
-        self.key_file        = kwargs.get('key_file', None)
-        self.lock_key_prefix = 'lock::authentication::tacacs::'
 
 
     def _on_data_received(self, *args):
         self.signal_emit('data_received', *args)
 
 
-    def tacacs_lock(self, lock, data, user):
-        lock.acquire()
-        key = self.lock_key_prefix + user
-        if not data.has_key(key):
-            data[key] = threading.Lock()
-        lock.release()
-        return data[key]
+    def _acquire_account(self):
+        if self.account is None:
+            account = self.account_manager.acquire_account()
+        else:
+            account = self.account
+            account.acquire()
+        return account
 
 
     def execute(self, global_lock, global_data, local_data):
         assert global_lock is not None
         assert global_data is not None
         assert local_data  is not None
-        conn = local_data['transport']
+
+        account = self._acquire_account()
+        conn    = local_data['transport']
         conn.set_on_data_received_cb(self._on_data_received)
-        self.tacacs_lock(global_lock, global_data, self.user).acquire()
+
         try:
-            conn.authenticate(self.user, self.password,
+            conn.authenticate(account.get_name(),
+                              account.get_password(),
                               wait     = self.wait,
-                              key_file = self.key_file)
+                              key_file = account.options['ssh_key_file'])
         except:
-            self.tacacs_lock(global_lock, global_data, self.user).release()
+            account.release()
             conn.set_on_data_received_cb(None)
             raise
-        local_data['user']     = self.user
-        local_data['password'] = self.password
-        self.tacacs_lock(global_lock, global_data, self.user).release()
+        local_data['account'] = account
+        account.release()
         conn.set_on_data_received_cb(None)
         return True
