@@ -12,6 +12,7 @@
 # You should have received a copy of the GNU General Public License
 # along with this program; if not, write to the Free Software
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
+from Account        import Account
 from Exscript       import Exscript
 from Job            import Job
 from TemplateRunner import TemplateRunner
